--- a/about.html
+++ b/about.html
@@ -10,12 +10,21 @@
 	</head>
 	<body class="is-preload">
         <div id="mySidenav" class="sidenav">
+                          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
   <a href="index.html">Main</a>
   <a href="about.html">About Me</a>
   <a href="contact.html">Contact</a>
   <a href="research.html">Research</a>
             <a href="projects.html">Projects</a>
             <!--<a href="cv.html">CV</a>-->
+        </div>
+        <div id="myClsdSideNav" class="clsdsidenav">
+            <div class="container" onclick="openNav()">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+</div>
         </div>
 <div id="main">
     <h1  >About Me</h1>
@@ -30,14 +39,14 @@
         <img width="25%" height="25%" src=images/parrot.jpg>
         <img width="25%" height="25%" src=images/torus.jpg>
         <img width="25%" height="25%" src=images/landscape.jpg></div></center>
-    <p>I'm an amateur musician. I mainly play guitar and try to sing. Sometimes I write my own stuff, but I usually just cover songs at open mics.
-        Here are some covers, excuse the audio quality: </p>
+    <p>I'm an amateur musician. I mainly play guitar and try to sing.
+        Here are some covers me and my friend recorded, excuse the audio quality: </p>
     <center> <audio controls> <source src="files/Hybrid2.mp3" type="audio/mp3"> </audio>
         <p> (Cover) The Misfits - Hybrid Moments (Vocals/Rhythm: Friend, Lead/Solo: Me) </p></center>
     <center> <audio controls> <source src="files/Time.mp3" type="audio/mp3"> </audio>
         <p> (Cover) Pink Floyd - Time (Lead: Friend, Vocals/Rhythm/Solo: Me) </p></center>
     <p>One day I'll put on some original works once I figure out how to get stuff onto Spotify.</p>
-    <p>Other than that, I'm a dog owner, nature enthusiast, archer, fisherman, and mathematician. I like dadrock, weird movies, and reading math books.</p>
+    <p>Other than that, I'm a dog owner, nature enthusiast, archer, fisherman, and mathematician.</p>
 </div>
 		<!-- Scripts -->
 
