--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,21 @@
 	</head>
 	<body class="is-preload">
         <div id="mySidenav" class="sidenav">
+                          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
   <a href="index.html">Main</a>
   <a href="about.html">About Me</a>
   <a href="contact.html">Contact</a>
   <a href="research.html">Research</a>
             <a href="projects.html">Projects</a>
             <!--<a href="cv.html">CV</a>-->
+        </div>
+        <div id="myClsdSideNav" class="clsdsidenav">
+            <div class="container" onclick="openNav()">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+</div>
         </div>
 <div id="main">
     <h1  >Contact</h1>
