--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body class="is-preload">
         <div id="mySidenav" class="sidenav">
+              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Main</a>
   <a href="about.html">About Me</a>
   <a href="contact.html">Contact</a>
@@ -16,13 +17,19 @@
             <a href="projects.html">Projects</a>
             <!--<a href="cv.html">CV</a>-->
         </div>
+        <div id="myClsdSideNav" class="clsdsidenav">
+            <div class="container" onclick="openNav()">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+</div>
+        </div>
 <div id="main">
     <center><img width="50%" height="50%" src=images/me.jpg></center>
     <h1  >Pavel Javornik</h1>
     <p>Welcome to my site! This is where I post any and all personal and collaborative projects, research papers, and things I'm interested in.</p>
 
-    <p>Information regarding employment, education, etc. can be found on my <a href="https://www.linkedin.com/in/pavel-javornik-a4561a126/">LinkedIn</a>.</p>
-    
+    <p>Information regarding employment,education, etc. can be found on my <a href="https://www.linkedin.com/in/pavel-javornik-a4561a126/">LinkedIn</a>.</p>
 </div>
 		<!-- Scripts -->
 
