added mobile support

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Pavel Javornik</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <script type='text/javascript' language='javascript'  src="assets/js/main.js"></script>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" onload="detectMobile()">
         <div id="mySidenav" class="sidenav">
               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Main</a>
@@ -27,9 +27,9 @@
 <div id="main">
     <center><img width="50%" height="50%" src=images/me.jpg></center>
     <h1  >Pavel Javornik</h1>
-    <p>Welcome to my site! This is where I post any and all personal and collaborative projects, research papers, and things I'm interested in.</p>
+    <p>Welcome to my site! This is where I post any and all personal and collaborative projects, research papers, and things I'm interested in. Click on the menu icon on the top left corner to navigate the site.</p>
 
-    <p>Information regarding employment,education, etc. can be found on my <a href="https://www.linkedin.com/in/pavel-javornik-a4561a126/">LinkedIn</a>.</p>
+    <p>Information regarding employment,education, etc. can be found on my <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pavel-javornik-a4561a126/">LinkedIn</a>.</p>
 </div>
 		<!-- Scripts -->
 
