--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
         <script type='text/javascript' language='javascript'  src="assets/js/main.js"></script>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" onload="detectMobile()">
         <div id="mySidenav" class="sidenav">
                           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
@@ -28,7 +28,7 @@
         </div>
 <div id="main">
     <h1  >About Me</h1>
-    <p>I was originally interested in becoming a math professor. While pursuing my PhD, I found that this wasn't the right path for me and decided to make a change. I wanted to earn a deent living and have more time to pursue personal projects. I became more interested in things like artificial intelligence and wanted to apply my math background to developing new tools. I had already had a good background in programming (I was one of those Linux/C++ computer science purists who converted to math because I found it more fun), so I found myself in an ideal place to understand the theory and the practice behind these tools. My focus was primarily on differentiable dynamical systems, algebraic topology, and analysis, but I constantly felt inspired to phrase AI stuff in these languages. My eventual goal is to becomee a Machine Learning Engineer so that I could continue learning about the latest developments and glean inspiration for research projects.</p>
+    <p>I was originally interested in becoming a math professor. While pursuing my PhD, I found that this wasn't the right path for me and decided to make a change. I wanted to earn a decent living and have more time to pursue personal projects. I became more interested in things like artificial intelligence and wanted to apply my math background to developing new tools. I had already had a good background in programming (I was one of those Linux/C++ computer science purists who converted to math because I found it more fun), so I found myself in an ideal place to understand the theory and the practice behind these tools. My focus was primarily on differentiable dynamical systems, algebraic topology, and analysis, but I constantly felt inspired to phrase AI stuff in these languages. My eventual goal is to becomee a Machine Learning Engineer so that I could continue learning about the latest developments and glean inspiration for research projects.</p>
     
     <p> I typically use Python, Tensorflow, Pytorch, SQL, and <a target="_blank" rel="noopener noreferrer" href="https://www.sagemath.org/">Sage</a> in my research. I dabble in HTML/CSS/PHP, javascript, and AWS as well. I wrote this website and stood it up on Amazon.</p>
     
