--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
         <script type='text/javascript' language='javascript'  src="assets/js/main.js"></script>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" onload="detectMobile()">
         <div id="mySidenav" class="sidenav">
                           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
