--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
     <th>Title</th>
     <th>Status</th>
     <th>View</th>
-    <th>Pub.ication Data</th>
+    <th>Publication Date</th>
 
   </tr>
   <tr>
